Added /users/status/{id} resource for results from create/update user
