# src/main/java/ronan_hanley/dist_sys/user_account_service/service/UserRESTController.java
@@ -34,6 +34,12 @@ public class UserRESTController {
                            .entity("Conflict, user with that id already exists").build();
         }
 
+        if (userManager.isOperationInProgress(newUser.getUserDetails().getUserId())) {
+            // 409 conflict
+            return Response.status(Response.Status.CONFLICT)
+                    .entity("Conflict, someone is already trying to create that user right now. Try again later.").build();
+        }
+
         // user isn't null and doesn't already exist, create user asynchronously
         try {
             userManager.createUserAsync(newUser);
@@ -44,9 +50,7 @@ public class UserRESTController {
                            .entity("Failed to create user, password hashing service was not available. Try again later.").build();
         }
 
-        // 201 created (user created successfully)
-        return Response.created(new URI("/users/" + newUser.getUserDetails().getUserId()))
-                       .entity("User created successfully").build();
+        return Response.accepted(new URI("/users/status/" + newUser.getUserDetails().getUserId())).build();
     }
 
     @GET
@@ -63,7 +67,7 @@ public class UserRESTController {
     }
 
     @PUT
-    public Response updateUser(NewUser updatedUser) {
+    public Response updateUser(NewUser updatedUser) throws URISyntaxException {
         if (updatedUser == null) {
             // 400 bad request
             return Response.status(Response.Status.BAD_REQUEST)
@@ -76,6 +80,12 @@ public class UserRESTController {
                     .entity("User not found with that id").build();
         }
 
+        if (userManager.isOperationInProgress(updatedUser.getUserDetails().getUserId())) {
+            // 409 conflict
+            return Response.status(Response.Status.CONFLICT)
+                    .entity("Conflict, someone is already trying to update that user right now. Try again later.").build();
+        }
+
         // user exists, update user
         try {
             userManager.updateUserAsync(updatedUser);
@@ -86,7 +96,20 @@ public class UserRESTController {
                     .entity("Failed to update user, password hashing service was not available. Try again later.").build();
         }
 
-        return Response.ok().entity("User updated successfully").build();
+        return Response.accepted(new URI("/users/status/" + updatedUser.getUserDetails().getUserId())).build();
+    }
+
+    @GET
+    @Path("/status/{id}")
+    public Response getUserStatus(@PathParam("id") Integer id) {
+        if (!userManager.isOperationResultAvailable(id)) {
+            // 404 user not found
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity("No create/update operation found for a user with that id").build();
+        }
+
+        // user exists, respond with create/update operation result
+        return userManager.getOperationResult(id);
     }
 
     @DELETE
